--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "a basic react app",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,5 +25,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
-  }
+  },
+  "browserlist": [
+    "last 10 Chrome version"
+  ]
 }
